fix overflow issue

--- a/client-src/scss/_slides.scss
+++ b/client-src/scss/_slides.scss
@@ -5,6 +5,7 @@
 .js {
   .w { // wrapper
     height: 100%;
+    overflow: hidden;
   }
   .s { // slide
     position: absolute;
